# asset-harvester

./: .gitignore  CONTRIBUTING.MD  README.md  THIRD_PARTY_LICENSE.txt  pyproject.toml  run.sh  run_inference.py  setup.sh
asset_harvester/: __init__.py
asset_harvester/camera_estimator/: __init__.py  inference.py  models.py
asset_harvester/multiview_diffusion/: __init__.py
asset_harvester/ncore_parser/: __init__.py  __main__.py  image_segmentation.py  mvdata.py  ncore_object_parser.py  parser.py  schemas.py
asset_harvester/patches/: cradio_compat.py
asset_harvester/tokengs/: attention.py  gs.py  lifting_inference.py  main.py  options.py  ply_io.py  train.py
asset_harvester/utils/: __init__.py  generate_external_assets_metadata.py  image_guard.py  image_segment.py  io.py  mvd_farthest_pose.py
data_samples/rectified_AV_objects/: README.md  (+1 more)
docs/: end_to_end_example.md  tokengs.md
models/tokengs/: .gitignore  README.md  main.py  pyproject.toml
models/tokengs/tokengs/: fused_ssim.py  gs.py  lifting_inference.py  ply_io.py  train.py
models/tokengs/tokengs/data/: __init__.py  datafield.py  provider.py  registry.py  sampler.py
models/tokengs/tokengs/data/static/: assetharvest.py
models/tokengs/tokengs/models/: activations.py  tokengs.py
models/tokengs/tokengs/utils/: colmap.py  data.py  model.py
ncore_parser/: pyproject.toml  run.sh
ncore_parser/src/ncore_parser/: __init__.py  __main__.py  ncore_object_parser.py  parser.py  ray_aabb.py
patches/: cradio_compat.py
scripts/: check_license_headers.py  run_ncore_parser.sh
utils/: image_segment.py
(+56 files in other folders)
