[project]
name = "ncore-parser"
version = "0.1.0"
description = "Asset Harvester ncore parser pipeline using ncore v4"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "opencv-python>=4.8.0",
    "transformers==4.48.3",
    "timm>=0.9.0",
    "einops>=0.7.0",
    "open-clip-torch",
    "scipy>=1.10.0",
    "Pillow>=12.1.1",
    # wandb>=0.16 needed to avoid np.float_ AttributeError with numpy 2.x
    "wandb>=0.16.0",
]

[project.scripts]
ncore-parser = "ncore_parser.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ncore_parser"]
