[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokengs"
version = "0.1.0"
description = "TokenGS: Decoupling 3D Gaussian Prediction from Pixels with Learnable Tokens"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "tyro",
    "lpips",
    "packaging",
    "safetensors",
    "scikit-image",
    "tqdm",
    "roma",
    "tensorboard",
    "decord",
    "wandb==0.17.5",
    "gsplat==1.5.3",
    "matplotlib",
]

[tool.setuptools]
packages = ["tokengs"]
